--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/userStyle/style.css">
+<link rel="stylesheet" href="/userStyle/adminLogin.css">
 
 <body>
     <div class="login-container">
